--- a/front/styles/globals.css
+++ b/front/styles/globals.css
@@ -26,7 +26,7 @@ body{
 }
 
 p{
-  margin: 0.5rem;
+  margin: 0;
 }
 
 a{
